# VR-we-are-CLI

./: .gitignore  LICENSE  README.md  converter.py  depthestimator.py  hdr.py  main.py  monitor.py  pipeline_core.py  presets.json  requirements.txt  sbsutils.py  setup_env.py  test_cli.py  torch_detect.py
GUI/: README.md  pyproject.toml
GUI/docs/: architecture.md  cli-contract.md  development.md
GUI/tests/: test_application.py  test_core.py  test_pyside.py  test_subprocess_runner.py
GUI/vr_we_are_gui/: __init__.py  __main__.py
GUI/vr_we_are_gui/adapters/: __init__.py  subprocess_runner.py
GUI/vr_we_are_gui/application/: __init__.py  controller.py
GUI/vr_we_are_gui/core/: __init__.py  command.py  config.py  jobs.py  validation.py
GUI/vr_we_are_gui/interfaces/: __init__.py
GUI/vr_we_are_gui/interfaces/pyside6/: __init__.py  app.py  main_window.py  theme.py
